docker-daemon-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: docker-daemon-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: docker-daemon
  template:
    metadata:
      labels:
        app: docker-daemon
    spec:
      securityContext:
        fsGroup: 0
      containers:
        - name: docker
          image: docker:24.0.0-rc.1-dind
          securityContext:
            privileged: true
            runAsUser: 0
            runAsGroup: 0
          command: ["dockerd"]
          args: ["--host=tcp://0.0.0.0:2376", "--host=unix:///var/run/docker.sock"]
          volumeMounts:
            - name: dind-storage
              mountPath: /var/lib/docker
          ports:
            - containerPort: 2376
              hostPort: 2376
      volumes:
        - name: dind-storage
          emptyDir: {}
