docker-daemon-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: docker-daemon-service
spec:
  selector:
    app: docker-daemon
  ports:
    - protocol: TCP
      port: 2376
      targetPort: 2376
