ingress-frontend.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: zolang-ingress-frontend
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "8m"
    nginx.ingress.kubernetes.io/proxy-buffer-size: "16k"
    nginx.ingress.kubernetes.io/proxy-buffering: "on"
    nginx.ingress.kubernetes.io/proxy-buffers-number: "4"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "300"
spec:
  ingressClassName: nginx
  rules:
    - host: www.zolang.store
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: zolang-frontend-service
                port:
                  number: 80
    - host: zolang.store
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: zolang-frontend-service
                port:
                  number: 80
  tls:
    - hosts:
        - www.zolang.store
      secretName: frontend-cert
